<resources>
    <string name="app_name">FindSpot</string>
    <string name="called_app_name">위저드 스팟</string>
    <string name="copyright">Copyright, 소은영은, All rights reserved</string>

    <string name="kakao_key">dc90ecf7e13bbcfd5d02a7a41ed33464</string>
    <string name="kakao_restAPI_key">550c20ef74b2e1a7ad5174bec5de700d</string>
    <string name="odsay_key">Fmml9S/S9aj/SPIDlu1uHf6qGftg2yAeTQEon7+Vfds</string>
    <string name="server_client_id">275804872784-o7vpknep10pgbkbbeegu884mgh99mgem.apps.googleusercontent.com</string>

    <string name="back">뒤로가기</string>
    <string name="gender">성별:</string>
    <string name="birthYear">태어난 연도:</string>
    <string name="ok">확인</string>
    <string name="cancel">취소</string>

    <string name="choice_gps_title">위치 선택하기</string>
    <string name="choice_gps_history"><![CDATA[최근에 [시간/거리] 찾은 위치 보기 >>]]></string>
    <string name="choice_gps_time">시간 기준</string>
    <string name="choice_gps_distance">거리 기준</string>
    <string name="choice_gps_add">추가</string>

    <string name="friend_title">친구</string>
    <string name="friend_add_description">add_friend</string>
    <string name="friend_noExist">친구목록에 친구가 없네요.\n친구를 추가해보세요:)</string>

    <string name="group_title">그룹</string>
    <string name="group_add_description">add_group</string>
    <string name="group_noExist">속한 그룹이 없으시네요.\n그룹을 추가해보세요:)</string>

    <string name="home_showmiddle_btn">중간지점 찾기</string>
    <string name="home_showmiddle_standard">(시간/거리상)</string>
    <string name="home_friend_btn">친구\n (추가, 삭제)</string>
    <string name="home_group_btn">그룹\n (추가, 삭제)</string>
    <string name="home_mypage_description">mypage</string>

    <string name="join_title">🌱회원가입🌱</string>
    <string name="join_id">ID:</string>
    <string name="join_email_hint">E-mail 주소 형식</string>
    <string name="join_duplicate_btn">중복확인</string>
    <string name="join_password">Password:</string>
    <string name="join_password_hint">8~16자의 문자, 숫자</string>
    <string name="join_switch_m">남자</string>
    <string name="join_switch_w">여자</string>
    <string name="join_birth_error">출생연도를 입력해주세요.</string>

    <string name="login_title">🌿로그인🌿</string>
    <string name="login_id">Email ID:</string>
    <string name="login_password">Password:</string>
    <string name="login_login_btn">로그인</string>
    <string name="login_join_btn">회원가입</string>
    <string name="login_social">소셜로그인 연동</string>
    <string name="login_kakao_description">kakao_login</string>
    <string name="login_naver_description">naver_login</string>
    <string name="login_google_description">google_login</string>
    <string name="login_facebook_description">facebook_login</string>

    <string name="mypage_title">My Page</string>

    <string name="selectwhom_title">대상자 선택</string>
    <string name="selectwhom_random_radio">임의로 위치 선택</string>
    <string name="selectwhom_group_radio">그룹 선택</string>
    <string name="selectwhom_next_btn">위치 선택하기</string>

    <string name="showmiddle_title">중간 지점 확인</string>
    <string name="showmiddle_viewAll_description">view_all_users</string>

    <string name="inquiry_title">문의하기</string>
    <string name="inquiry_content">문의는 kimsoen0403@gmail.com으로\n 남겨주시면 신속히 답변드리겠습니다.</string>

    <string name="edit_profile_title">개인정보 수정</string>

    <string name="change_password_title">비밀번호 변경</string>
    <string name="change_password_current">현재 비밀번호</string>
    <string name="change_password_currentError">사용 중인 비밀번호가 올바르지 않습니다. 다시 입력해 주세요.</string>
    <string name="change_password_new">새 비밀번호</string>
    <string name="change_password_newError">현재 사용 중인 비밀번호와 일치합니다. 새로운 비밀번호를 입력해 주세요.</string>
    <string name="change_password_precautions">🔐 비밀번호 설정 시 주의사항</string>
    <string name="change_password_precautionsContent">- 8~16자 이내로 영문 대소문자/숫자/특수문자 사용 가능\n- 공백은 사용할 수 없음!\n- 숫자 1개 이상\n- 대문자 혹은 소문자 1개 이상\n- 사용 가능한 특수문자:  ~!?@_-*</string>

</resources>
