<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="3dp"
    android:background="@drawable/full_border">

    <ImageView
        android:id="@+id/changePW_back"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:src="@drawable/back"
        android:scaleType="fitCenter"
        android:adjustViewBounds="true"
        android:contentDescription="@string/back"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/changePW_title"
        app:layout_constraintBottom_toTopOf="@id/changePW_baseline"
        app:layout_constraintHorizontal_bias="0.15"
        app:layout_constraintVertical_bias="0.5" />

    <TextView
        android:id="@+id/changePW_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/change_password_title"
        android:textStyle="bold"
        android:textColor="#000000"
        android:textSize="25sp"
        android:layout_marginTop="15dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0"/>

    <View
        android:id="@+id/changePW_baseline"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="10dp"
        android:layout_marginRight="1dp"
        android:layout_marginLeft="1dp"
        android:background="#555555"
        app:layout_constraintTop_toBottomOf="@id/changePW_title"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:orientation="vertical"
        android:focusable="true"
        android:focusableInTouchMode="true"
        app:layout_constraintTop_toBottomOf="@id/changePW_baseline"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@id/copyright"
        app:layout_constraintVertical_bias="0.45">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginBottom="10dp"
            android:text="@string/change_password_current"
            android:textColor="#000000"
            android:textStyle="bold"/>
        <EditText
            android:id="@+id/changePW_cPW"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/menu_border"
            android:hint="@string/change_password_current"
            android:inputType="textPassword"
            android:textSize="16sp" />
        <TextView
            android:id="@+id/changePW_cPWError"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/change_password_currentError"
            android:textColor="#ff0000"
            android:textSize="11sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="50dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginBottom="10dp"
            android:text="@string/change_password_new"
            android:textColor="#000000"
            android:textStyle="bold" />
        <EditText
            android:id="@+id/changePW_newPW"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/menu_border"
            android:hint="@string/change_password_new"
            android:inputType="textPassword"
            android:textSize="16sp" />
        <TextView
            android:id="@+id/changePW_newPWError"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/change_password_newError"
            android:textColor="#ff0000"
            android:textSize="11sp" />
        <!--형식이 일치하지 않습니다.-->
        <View
            android:layout_width="match_parent"
            android:layout_height="50dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginBottom="10dp"
            android:text="@string/change_password_precautions"
            android:textColor="#444444"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:lineSpacingExtra="4dp"
            android:text="@string/change_password_precautionsContent"
            android:textColor="#666666"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="70dp"/>

        <Button
            android:id="@+id/changePW_change"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:text="@string/change_password_title"
            android:textStyle="bold"/>
    </LinearLayout>

    <TextView
        android:id="@+id/copyright"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="2dp"
        android:text="@string/copyright"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintHorizontal_bias="1"
        app:layout_constraintVertical_bias="1" />

</androidx.constraintlayout.widget.ConstraintLayout>
