<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="3dp"
    android:background="@drawable/full_border">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_title"
        android:textColor="#000000"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/login_layout1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.636" />

    <LinearLayout
        android:id="@+id/login_layout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="50dp"
        android:paddingRight="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.55" >

        <LinearLayout
            android:id="@+id/login_ID_layout"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:paddingLeft="10dp"
            android:paddingRight="10dp">

            <TextView
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:textColor="#000000"
                android:text="@string/login_id" />

            <EditText
                android:id="@+id/login_ID_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:textSize="16sp"
                android:textColor="#000000"
                android:autofillHints="AUTOFILL_HINT_EMAIL_ADDRESS"
                android:inputType="textEmailAddress"
                tools:ignore="LabelFor" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/login_PW_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingLeft="10dp"
            android:paddingRight="10dp">

            <TextView
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:textColor="#000000"
                android:text="@string/login_password" />

            <EditText
                android:id="@+id/login_PW_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:textSize="16sp"
                android:inputType="textPassword"
                android:textColor="#000000"
                android:autofillHints="AUTOFULL_HINT_PASSWORD"
                tools:ignore="LabelFor" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/login_login_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:text="@string/login_login_btn"
                style="?android:attr/buttonBarButtonStyle" />

            <Button
                android:id="@+id/login_join_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="@string/login_join_btn"
                style="?android:attr/buttonBarButtonStyle" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="-20dp"
            android:layout_marginRight="-20dp"
            android:background="#555555" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingTop="20dp"
            android:paddingBottom="10dp"
            android:text="@string/login_social" />
    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="70dp"
        android:paddingRight="70dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/login_layout1"
        app:layout_constraintVertical_bias="0">

        <ImageButton
            android:id="@+id/login_kakao"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:adjustViewBounds="true"
            android:background="@drawable/kakao_icon"
            android:scaleType="centerInside"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/login_naver"
            app:layout_constraintTop_toTopOf="parent"
            android:contentDescription="@string/login_kakao_description" />

        <ImageButton
            android:id="@+id/login_naver"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:adjustViewBounds="true"
            android:background="@drawable/naver_icon"
            android:scaleType="centerInside"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toRightOf="@id/login_kakao"
            app:layout_constraintRight_toLeftOf="@id/login_google"
            app:layout_constraintTop_toTopOf="parent"
            android:contentDescription="@string/login_naver_description" />

        <ImageButton
            android:id="@+id/login_google"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:adjustViewBounds="true"
            android:background="@drawable/google_icon"
            android:scaleType="centerInside"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toRightOf="@id/login_naver"
            app:layout_constraintRight_toLeftOf="@id/login_facebook"
            app:layout_constraintTop_toTopOf="parent"
            android:contentDescription="@string/login_google_description" />

        <ImageButton
            android:id="@+id/login_facebook"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:adjustViewBounds="true"
            android:background="@drawable/facebook_icon"
            android:scaleType="centerInside"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toRightOf="@id/login_google"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:contentDescription="@string/login_facebook_description" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/copyright"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintHorizontal_bias="1"
        app:layout_constraintVertical_bias="1" />

</androidx.constraintlayout.widget.ConstraintLayout>
