<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="3dp"
    android:background="@drawable/full_border">

    <ImageView
        android:id="@+id/selectwhom_back"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:src="@drawable/back"
        android:scaleType="fitCenter"
        android:adjustViewBounds="true"
        android:contentDescription="@string/back"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/selectwhom_title"
        app:layout_constraintBottom_toTopOf="@id/selectwhom_baseline01"
        app:layout_constraintHorizontal_bias="0.15"
        app:layout_constraintVertical_bias="0.5" />

    <TextView
        android:id="@+id/selectwhom_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/selectwhom_title"
        android:textStyle="bold"
        android:textColor="#000000"
        android:textSize="25sp"
        android:layout_marginTop="15dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0"/>

    <View
        android:id="@+id/selectwhom_baseline01"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="10dp"
        android:layout_marginRight="1dp"
        android:layout_marginLeft="1dp"
        android:background="#555555"
        app:layout_constraintTop_toBottomOf="@id/selectwhom_title"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0" />

    <LinearLayout
        android:id="@+id/selectwhom_linearlayout01"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        app:layout_constraintTop_toBottomOf="@id/selectwhom_baseline01"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@id/selectwhom_next"
        app:layout_constraintVertical_bias="0.05">

        <RadioGroup
            android:id="@+id/selectwhom_radiogroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/selectwhom_random"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/selectwhom_random_radio" />

            <RadioButton
                android:id="@+id/selectwhom_group"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/selectwhom_group_radio"
                android:layout_marginTop="20dp"/>

        </RadioGroup>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/selectwhom_grouplist_rv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:transcriptMode="alwaysScroll"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="10dp" />
    </LinearLayout>

    <Button
        android:id="@+id/selectwhom_next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="15dp"
        android:paddingBottom="15dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:text="@string/selectwhom_next_btn"
        app:layout_constraintBottom_toTopOf="@id/copyright"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.87" />

    <TextView
        android:id="@+id/copyright"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="2dp"
        app:layout_constraintVertical_bias="1"
        app:layout_constraintHorizontal_bias="1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:text="@string/copyright" />
</androidx.constraintlayout.widget.ConstraintLayout>
