<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="3dp"
    android:background="@drawable/full_border">

    <ImageView
        android:id="@+id/group_back"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:src="@drawable/back"
        android:scaleType="fitCenter"
        android:adjustViewBounds="true"
        android:contentDescription="@string/back"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/group_title"
        app:layout_constraintBottom_toTopOf="@id/group_baseline01"
        app:layout_constraintHorizontal_bias="0.15"
        app:layout_constraintVertical_bias="0.5" />

    <TextView
        android:id="@+id/group_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/group_title"
        android:textStyle="bold"
        android:textColor="#000000"
        android:textSize="25sp"
        android:layout_marginTop="15dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0"/>

    <ImageButton
        android:id="@+id/group_add"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:background="@drawable/addgroup_icon"
        android:layout_marginEnd="10dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toRightOf="@id/group_title"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@id/group_baseline01"
        app:layout_constraintVertical_bias="0.5"
        app:layout_constraintHorizontal_bias="1"
        android:contentDescription="@string/group_add_description" />

    <View
        android:id="@+id/group_baseline01"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="10dp"
        android:layout_marginRight="1dp"
        android:layout_marginLeft="1dp"
        android:background="#555555"
        app:layout_constraintTop_toBottomOf="@id/group_title"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0" />

    <TextView
        android:id="@+id/group_tvNoGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:lineSpacingExtra="10dp"
        android:text="@string/group_noExist"
        android:textAlignment="center"
        android:textColor="#474747"
        android:textSize="18sp"
        app:layout_constraintTop_toTopOf="@id/group_swipeMenuLv"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/group_swipeMenuLv" />

    <com.baoyz.swipemenulistview.SwipeMenuListView
        android:id="@+id/group_swipeMenuLv"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="20dp"
        android:transcriptMode="alwaysScroll"
        app:layout_constraintVertical_weight="1"
        app:layout_constraintTop_toBottomOf="@id/group_baseline01"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@id/copyright"/>

    <TextView
        android:id="@+id/copyright"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="2dp"
        android:text="@string/copyright"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintHorizontal_bias="1"
        app:layout_constraintVertical_bias="1" />

</androidx.constraintlayout.widget.ConstraintLayout>
